@86epxqy15 #Resolve comments, Fix bad practices and code refactoring for code readability and application of dry principle

--- a/apps/web-backoffice-generic/src/pages/index.css
+++ b/apps/web-backoffice-generic/src/pages/index.css
@@ -152,14 +152,29 @@ code {
 }
 
 .tiptap table {
+    border-collapse: collapse;
     margin: 0;
     overflow: hidden;
     table-layout: fixed;
     width: 100%;
-    border-collapse: collapse;
+    max-width: 100%;
+}
+
+.tiptap table .selectedCell:after {
+    background: #3072ff50;
+    content: '';
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    position: absolute;
+    z-index: 2;
 }
 
 .column-resize-handle {
+    background-color: rgba(0, 0, 255, 0.397);
+    bottom: -2px;
     pointer-events: none;
     position: absolute;
     right: -2px;
